# C_plus_plus_Projects

covariance_features_point_cloud/: CMakeLists.txt  buddha_0.pcd  buddha_24.pcd  bunny_45.pcd  calc_ft.cpp  dragon_0.pcd  dragon_24.pcd  hammer_0.pcd  hammer_45.pcd  horse_0.pcd  horse_180.pcd
fpfh_shot/: CMakeLists.txt  ft_matching.cpp
generalized_cpicp/: cpicp.cpp
part_dual_context_robovis_2k21/: poly_PCA.h  poly_rmse.h  poly_sort.h  poly_variance.h  versao_poly.cpp
pca_point_cloud/: CMakeLists.txt  concatenate.cpp
random_sampling_point_cloud/: CMakeLists.txt  README.md  random_fixed.cpp
rotation_matrix_point_cloud/: CMakeLists.txt  matrix_transform.cpp
sac_ia_/sac_icp/: CMakeLists.txt  sac_ia_icp.cpp
sac_ia_/sac_ndt/: CMakeLists.txt  sac_ndt.cpp
ups_4pcs_test/: CMakeLists.txt  README.md  poly_compare.h  poly_entropy.h  versao_poly.cpp
ups_code_sensors/: CMakeLists.txt  versao_luis.cpp  versao_poly.cpp
